--- a/index.html
+++ b/index.html
@@ -3,9 +3,81 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Profile</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        background-color: #f7f7f7;
+      }
+      .container {
+        max-width: 800px;
+        margin: 0 auto;
+        background: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+      h1 {
+        font-size: 2em;
+        color: #333;
+      }
+      img {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+      }
+      .contact-info a {
+        display: block;
+        margin: 10px 0;
+        color: #0066cc;
+        text-decoration: none;
+      }
+      .contact-form input,
+      .contact-form textarea {
+        width: calc(100% - 20px);
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+      .contact-form button {
+        padding: 10px 20px;
+        background: #0066cc;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      .contact-form button:hover {
+        background: #004d99;
+      }
+    </style>
   </head>
   <body>
-    예시 입니다. 11월 22일에 만든 예시요..
+    <div class="container">
+      <h1>My Profile</h1>
+      <h2>JUNE</h2>
+      <p>Hello! I'm JUNE.</p>
+      <div class="contact-info">
+        <p>Contact me at:</p>
+        <a href="mailto:jiyoonlee.b@gmail.com">jiyoonlee.b@gmail.com</a>
+        <a href="tel:+821063535440">+82 10 6353 5440</a>
+      </div>
+      <h3>Contact Me</h3>
+      <form class="contact-form">
+        <input type="text" name="name" placeholder="Name" required />
+        <input type="email" name="email" placeholder="Email" required />
+        <textarea
+          name="message"
+          placeholder="Message"
+          rows="5"
+          required
+        ></textarea>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
