--- a/html/index.html
+++ b/html/index.html
@@ -59,6 +59,12 @@
   <body>
     <div class="container">
       <h1>My Profile</h1>
+      <img
+        src="1122/blackCat"
+        alt="My Profile Photo"
+        width="150"
+        height="150"
+      />
       <h2>JUNE</h2>
       <p>Hello! I'm JUNE.</p>
       <div class="contact-info">
