--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <body>
     <div class="container">
       <h1>My Profile</h1>
-      <img src="blackCat.jpg" alt="Black Cat" width="150" height="150" />
+      <img src="Image/blackCat.jpg" alt="Black Cat" width="150" height="150" />
       <h2>JUNE</h2>
       <p>Hello! I'm JUNE.</p>
       <div class="contact-info">
