--- a/profile_v2.html
+++ b/profile_v2.html
@@ -27,7 +27,7 @@
         </div>
         <div class="contact">
           <p>Contact me at :</p>
-          <a href="mailto:Jiyoonlee.b@gmail.com">Jiyoonlee.b@gmail.com</a> |
+          <a href="mailto:jiyoonlee.b@gmail.com">jiyoonlee.b@gmail.com</a> |
           <a href="tel:+821063535440">+82 10 6353 5440</a>
         </div>
         <form class="contact-form">
