--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               placeholder="ex. Rovert.k@gmail.com"
             />
           </div>
-          <div class="form-group">
+          <div class="form-group3">
             <label for="message">Message</label>
             <textarea
               id="message"
